# caloron-noether

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  register_phases.sh  register_stages.sh  scheduler.json  scheduler.toml  stage_catalog.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  noether-compat.yml  pages.yml  quickstart.yml  release.yml
caloron/: __init__.py  organisation.py
caloron/cli/: __init__.py  main.py
caloron/metrics/: collector.py
caloron/project/: __init__.py  store.py
compositions/: full_cycle.json  kickoff.json  retro.json  spawn_agent.json  sprint_plan.json  sprint_tick.json  sprint_tick_core.json  sprint_tick_stateful.json
context/: inline-stages.md  instructions.md
demo/: record.sh  record_v2.sh
deploy/: README.md
deploy/docker/: Dockerfile.coordinator  Dockerfile.worker  docker-compose.yml
deploy/k8s/: Chart.yaml  values.yaml
deploy/k8s/templates/: configmap.yaml  coordinator.yaml  gitea.yaml  networkpolicy.yaml  postgres.yaml  worker.yaml
docs/: CNAME  comparison.md  demo.md  index.md
docs/casts/: full-sprint.cast  ota-sprint.cast  v2-features.cast
docs/examples/: comparison.md  e2e-sprint.md
docs/guide/: architecture.md  compositions.md  getting-started.md  promotion.md  shell.md  stages.md
docs/reference/: kv-conventions.md  scheduler.md  shell-api.md  stage-catalog.md
docs/roadmap/: 2026-04-18-aligning-with-noether-1.0.md
docs/tutorial/: index.md
examples/: orchestrator.py
orchestrator/: __init__.py  __main__.py  agent_configurator.py  agent_versioning.py  agentspec_bridge.py  claude_flags.py  hr_agent.py  orchestrator.py  post_sprint_deploy.py  roles.py  skill_store.py  template_store.py  types_.py  validation.py
scripts/: sandbox-agent.sh  sandbox-passthrough.sh  stub_agent.py
shell/: Cargo.toml
shell/src/: auth.rs  heartbeat_server.rs  main.rs  spawner.rs  validation.rs
stages/: _run_stage.py
stages/dag/: evaluate.py  execute_actions.py  is_complete.py  unblocked_tasks.py  validate.py
stages/github/: add_label.py  create_issue.py  get_pr_status.py  merge_pr.py  poll_events.py  post_comment.py
stages/kickoff/: fetch_repo_context.py  generate_dag.py
stages/phases/: _llm.py  architect_po.py  design_po.py  dev_po.py  phase_schemas.py  phases_to_sprint_tasks.py  review_po.py
stages/retro/: analyze_feedback.py  collect_feedback.py  compute_kpis.py  write_report.py
stages/sprint/: build_tick_output.py  load_tick_state.py  project_all_to_execute.py  project_health_to_intervention.py  project_poll_to_eval.py  save_tick_state.py
stages/supervisor/: check_health.py  compose_message.py  decide_intervention.py
templates/: fastapi-postgres.yaml  fastapi.yaml  nextjs.yaml  python-data.yaml  rust-cli.yaml
test/: compare.sh  compare_sprint.sh  gitea_api.sh
tests/: conftest.py  test_claude_flags.py  test_cli_smoke.py  test_github_host_param.py  test_metrics.py  test_orchestrator_learnings.py  test_orchestrator_security.py  test_orchestrator_types.py  test_organisation.py  test_phases.py  test_project_store.py  test_required_skills.py  test_scaffold_selection.py  test_sprint_chain_integration.py  test_sprint_kv_stages.py  test_sprint_reshape_stages.py  test_stage_catalog.py  test_stub_framework_sprint.py  test_validation.py
